review LU decomposition notebooks

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -1322,12 +1322,12 @@
     "            assert A.shape[1] == N, 'A must be square'\n",
     "            assert Y.shape[0] == N, 'A columns must have the same size as Y rows'\n",
     "\n",
-    "        # create matrix C by stacking A and the identity matrix (eq. 12)\n",
+    "        # create matrix C by stacking A and y\n",
     "        C = \n",
     "\n",
     "        for k = 1:N-1\n",
     "\n",
-    "            # permutation step (computation of C tilde)\n",
+    "            # permutation step (computation of C tilde - eq. 3)\n",
     "            p, C = permut(C, k-1)\n",
     "\n",
     "            # assert the pivot is nonzero\n",
@@ -1337,11 +1337,12 @@
     "            # in the lower part of C (equations 5 and 7)\n",
     "            C[k:,k-1] = \n",
     "\n",
-    "            # zeroing of the elements in the ith column (equation 8)\n",
+    "            # zeroing of the elements in the (k-1)th column (equation 8)\n",
     "            C[k:,k:] = \n",
     "\n",
-    "        # return the inverse of A\n",
-    "        return np.triu(C[:,:N]), C[:,N:]"
+    "        # return the triangular matrix with Gauss multipliers and \n",
+    "        # all equivalent vectors\n",
+    "        return C[:,:N], C[:,N:]"
    ]
   },
   {
@@ -1371,8 +1372,17 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# use the Gauss_elim_expanded to compute the expanded equivalent triangular system\n",
-    "B, Z = Gauss_elim_expanded(A, np.identity(N))"
+    "# use the Gauss_elim_expanded to compute the expanded system\n",
+    "# When computing the inverse, the second input is the identity\n",
+    "C, Z = Gauss_elim_expanded(A, np.identity(N))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# select the upper triangle of C\n",
+    "B = np.triu(C)"
    ]
   },
   {
@@ -1406,11 +1416,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your functions file, create a function called `gauss_elim` to compute the equivalent triangular system. Note that the algorithm shown above uses the function `permut`, receives the matrix `A` and the vector `y` and returns two numpy arrays containing the equivalent triangular system, as well as the Gauss multipliers. \n",
+    "1) In your functions file, create a function called `Gauss_elim` to compute the equivalent triangular system. Note that the algorithm shown above uses the function `permut`, receives the matrix `A` and the vector `y` and returns two numpy arrays containing the equivalent triangular system, as well as the Gauss multipliers. \n",
     "\n",
-    "2) In your test file, create a linear system and the associated equivalent triangular system (do not use the function `gauss_elim`!). Then use the function `gauss_elim` to compute an equivalent triangular system. Finally, compare the true and the computed triangular system. They must be equal to each other.\n",
+    "2) In your test file, create a linear system and the associated equivalent triangular system (do not use the function `Gauss_elim`!). Then use the function `Gauss_elim` to compute an equivalent triangular system. Finally, compare the true and the computed triangular system. They must be equal to each other.\n",
     "\n",
-    "3) In your test file, create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `gauss_elim` to compute the equivalent triangular system. Use one of your functions to compute a vector `x1` by solving the equivalent triangular system. Finally, compare the computed vector `x1` and the expected vector `x0`.\n",
+    "3) In your test file, create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `Gauss_elim` to compute the equivalent triangular system. Use one of your functions to compute a vector `x1` by solving the equivalent triangular system. Finally, compare the computed vector `x1` and the expected vector `x0`.\n",
     "\n",
     "4) In your test file, create a test for the function `permut` presented above. For this test, create a reference input and a reference output. Then, compare the result produced by the function `permut` and the reference output."
    ]
@@ -1426,9 +1436,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) In your functions file, create a function called `mat_inverse` to compute the inverse of a real matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, according to the scheme presented above.\n",
+    "1) In your functions file, create a function called `Gauss_elim_expanded` to compute the expanded equivalent system. The code must receive a matrix `A` and a matrix `Y` and return the matrix `C` (the same for function `Gauss_elim`) and the matriz `Z` containing all vector of the equivalent system.\n",
     "\n",
-    "2) Create two tests in your test file. In the first test, create a matrix `A`, compute its inverse `Ainv` by using the function `mat_inverse` and verify if the products `A Ainv` and `Ainv A` are equal to the identity matrix. The second test must compare the inverse matrix computed by using `mat_inverse` and the inverse matrix computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
+    "2) In your test file, create two tests. In the first test, create a matrix `A`, compute its inverse `Ainv` with function `Gauss_elim_expanded` and verify if the products `A Ainv` and `Ainv A` are equal to the identity matrix. The second test must compare the computed inverse matrix and that computed by using the routine [`numpy.linalg.inv`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.inv.html). "
    ]
   },
   {
