--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -513,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    def lu_decomp(A, check_input=True):\n",
+    "    def lu_decomp_pivoting(A, check_input=True):\n",
     "        N = A.shape[0]\n",
     "        if check_input is True:\n",
     "            assert A.ndim == 2, 'A must be a matrix'\n",
@@ -574,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Testing the function `lu_decomp`"
+    "#### Testing the function `lu_decomp_pivoting`"
    ]
   },
   {
@@ -744,14 +744,21 @@
    "source": [
     "### Exercise\n",
     "\n",
-    "1. In your `my_functions.py` file, create a function called `lu_decomp_pivot` for implementing the LU decomposition presented above. The code must receive a matrix `A` and the vector `y` and return the matrices `C` and `P`.\n",
+    "1. In your functions file, create a function called `lu_decomp_pivoting` for implementing the LU decomposition presented above. The code must receive a matrix `A` and the vector `y` and return the matrices `C` and `P`.\n",
     "\n",
-    "2. In your `my_functions.py` file, create a function called `lu_solve_pivot`. This function must receive the matrices `C` and `P` and return the solution vector `x`. Function `lu_solve_pivot` must use the functions you have created for solving triangular systems.\n",
+    "2. In your functions file, create a function called `lu_solve_pivoting`. This function must receive the matrices `C` and `P` and return the solution vector `x`. Function `lu_solve_pivoting` must use the functions you have created for solving triangular systems.\n",
     "\n",
-    "3. In your `test_my_functions.py` file, create a test that defines a square matrix `A` and a vector `y`, compute a matrices `C` and `P ` by using the function `lu_decomp_pivot`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `PA = LU` is satisfied.\n",
+    "3. In your test file, create a test that defines a square matrix `A` and a vector `y`, compute a matrices `C` and `P ` by using the function `lu_decomp_pivoting`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `PA = LU` is satisfied (see the exampl above).\n",
     "\n",
-    "4. In your `test_my_functions.py` file, create two aditional tests. One test must compare the matrices `P`, `L`, `U` obtainted by using your function `lu_decomp_pivot` with the matrices `P`, `L`, `U` obtainted by using the function [`scipy.linalg.lu`](http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.linalg.lu.html). Be careful! The matrix `P` calculated by the routine `scipy.linalg.lu` is equal to the transpose of the matrix `P` calculated by the algorithm presented here. The second test must create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `lu_solve_pivot` to compute a vector `x1` by solving the linear system. Finally, compare the computed vector `x1` and the expected vector `x0`."
+    "4. In your test file, create two aditional tests. One test must compare the matrices `P`, `L`, `U` obtainted by using your function `lu_decomp_pivoting` with the matrices `P`, `L`, `U` obtainted by using the function [`scipy.linalg.lu`](https://docs.scipy.org/doc/scipy/reference/reference/generated/scipy.linalg.lu.html). Be careful! The matrix `P` calculated by the routine `scipy.linalg.lu` is equal to the transpose of the matrix `P` calculated by using `lu_decomp_pivoting`. The second test must create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the functions `lu_decomp_pivoting` and `lu_solve_pivoting` to compute a vector `x1` by solving the linear system. Finally, compare the computed vector `x1` and the expected vector `x0`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
