--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -328,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{Q}^{(-k)}$ represent the inverse of a Gauss transformation $\\mathbf{Q}^{(k)}$ ([equation 6](#eq6)), $k = 1, \\dots, N-1$. We know that $\\mathbf{A}^{(2)}$ ([equation 1c](#eq1)) is an upper triangular matrix. However, what about the matrix $\\mathbf{Q}^{-1}$ ([equation 7b](#eq7b))? To answer this question, let's define a generic $\\mathbf{Q}^{(-k)}$:"
+    "where $\\mathbf{Q}^{(-k)}$ represents the inverse of a Gauss transformation $\\mathbf{Q}^{(k)}$ ([equation 6](#eq6)), $k = 1, \\dots, N-1$. We know that $\\mathbf{A}^{(2)}$ ([equation 1c](#eq1)) is an upper triangular matrix. However, what about the matrix $\\mathbf{Q}^{-1}$ ([equation 7b](#eq7b))? To answer this question, let's define a generic $\\mathbf{Q}^{(-k)}$:"
    ]
   },
   {
@@ -357,6 +357,7 @@
    "metadata": {},
    "source": [
     "<a id='eq9'></a>\n",
+    "\n",
     "$$\n",
     "\\begin{split}\n",
     "\\mathbf{Q}^{(k)} \\mathbf{Q}^{(-k)}\n",
@@ -378,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The third row of ([equation 9](#eq9)) uses the fact that $\\left( \\mathbf{u}^{(k-1)} \\right)^{\\top} \\mathbf{t}^{(k)} = 0$. This property can be easily verified by noting that, while the $(k-1)$th element of $\\mathbf{u}^{(k-1)}$ is its only nonzero element, the Gauss multipliers $t_{i}^{(k)}$, $k = 0, \\dots, k-1$, forming the Gauss vector $\\mathbf{t}^{(k)}$ are equal to zero."
+    "The third row of ([equation 9](#eq9)) uses the fact that $\\left( \\mathbf{u}^{(k-1)} \\right)^{\\top} \\mathbf{t}^{(k)} = 0$. This property can be easily verified by noting that, while the $(k-1)$th element of $\\mathbf{u}^{(k-1)}$ is its only nonzero element, all elements $t_{i}^{(k)}$, $k = 0, \\dots, k-1$, forming the Gauss vector $\\mathbf{t}^{(k)}$ are equal to zero."
    ]
   },
   {
@@ -639,13 +640,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, create a function called `lu_decomp` for implementing the LU decomposition presented above. The code must receive a matrix `A` and return the matrix `C` containing the matrices `L` (without the main diagonal) and `U`.\n",
+    "1. In your functions file, create a function called `lu_decomp` for implementing the LU decomposition presented above. The code must receive a matrix `A` and return the matrix `C` containing the matrices `L` (without the main diagonal) and `U`.\n",
     "\n",
-    "2. In your `my_functions.py` file, create a function called `lu_solve`. This function must receive the matrix `C` and a vector `y` and return the solution vector `x`. Function `lu_solve` must use the functions you have created for solving triangular systems.\n",
+    "2. In your functions file, create a function called `lu_solve`. This function must receive the matrix `C` (computed with `lu_decomp`) and a vector `y` and return the solution vector `x`. Function `lu_solve` must use your functions for solving triangular systems.\n",
     "\n",
-    "3. In your `test_my_functions.py` file, create a test that defines a square matrix `A`, compute a matrix `C` by using the function `lu_decomp`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `A = LU` is satisfied.\n",
+    "3. In your test file, create a test that defines a square matrix `A`, compute a matrix `C` by using the function `lu_decomp`, use `C` to create the triangular matrices `L` and `U` and verify the if condition `A = LU` is satisfied (see the example above).\n",
     "\n",
-    "4. In your `test_my_functions.py` file, create two aditional tests. One test must compare the solution of the linear system obtained by `lu_solve` and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html). The second test must create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the function `lu_solve` to compute a vector `x1` by solving the linear system. Finally, compare the computed vector `x1` and the expected vector `x0`."
+    "4. In your test file, create two aditional tests. One test must compare the solution of the linear system obtained by `lu_solve` and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html). The second test must create a matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use the functions `lu_decomp` and `lu_solve` to compute a vector `x1` by solving the linear system. Finally, compare the computed vector `x1` and the expected vector `x0`."
    ]
   },
   {
