LU decomposition class

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -1262,7 +1262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{u}_{i}$, $i = 1, \\dots, N$, is a $N \\times 1$ vector with all elements equal to zero, except the $i$th element, which is equal to $1$. The vectors $\\mathbf{A}^{-1}\\left[ \\, : \\, , \\, i  \\right]$ and $\\mathbf{u}_{i}$ represent the $i$th column of $\\mathbf{A}^{-1}$ and $\\mathbf{I}$, respectively. [Equation 10](#eq10) can then be separated into $N$ linear systems:"
+    "where $\\mathbf{u}_{i}$, $i = 0, \\dots, N-1$, is a $N \\times 1$ vector with all elements equal to zero, except the $i$th element, which is equal to $1$. The vectors $\\mathbf{A}^{-1}\\left[ \\, : \\, , \\, i  \\right]$ and $\\mathbf{u}_{i}$ represent the $i$th column of $\\mathbf{A}^{-1}$ and $\\mathbf{I}$, respectively. [Equation 10](#eq10) can then be separated into $N$ linear systems:"
    ]
   },
   {
