--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -471,9 +471,9 @@
     "\\tilde{\\mathbf{Q}}^{-1} = \n",
     "\\left[ \\begin{array}{cccc}\n",
     "1 & 0 & 0 & 0 \\\\\n",
-    "\\tilde{t}_{1}^{(1)} & 1 & 0 & 0 \\\\\n",
-    "\\tilde{t}_{2}^{(1)} & \\tilde{t}_{2}^{(2)} & 1 & 0 \\\\\n",
-    "\\tilde{t}_{3}^{(1)} & \\tilde{t}_{3}^{(2)} & \\tilde{t}_{3}^{(3)} & 1\n",
+    "\\tilde{t}_{0}^{(1)} & 1 & 0 & 0 \\\\\n",
+    "\\tilde{t}_{1}^{(1)} & \\tilde{t}_{1}^{(2)} & 1 & 0 \\\\\n",
+    "\\tilde{t}_{2}^{(1)} & \\tilde{t}_{2}^{(2)} & \\tilde{t}_{2}^{(3)} & 1\n",
     "\\end{array} \\right] \\quad .\n",
     "$$"
    ]
@@ -605,7 +605,7 @@
    "metadata": {},
    "source": [
     "# use the lu_decomp to compute L and U\n",
-    "P, C = lu_decomp(A)"
+    "P, C = lu_decomp_pivoting(A)"
    ]
   },
   {
