--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -182,16 +182,16 @@
     "&= \\left[ \n",
     "\\begin{array}{c}\n",
     "0 \\\\\n",
-    "t_{2}^{(1)} \\\\\n",
-    "t_{3}^{(1)}\n",
+    "t_{1}^{(1)} \\\\\n",
+    "t_{2}^{(1)}\n",
     "\\end{array} \\right] \\cdot \n",
     "\\left[ \\begin{array}{ccc}\n",
     "1 & 0 & 0\n",
     "\\end{array} \\right] \\\\\n",
     "&= \\left[ \\begin{array}{ccc}\n",
     "0 & 0 & 0 \\\\\n",
-    "t_{2}^{(1)} & 0 & 0 \\\\\n",
-    "t_{3}^{(1)} & 0 & 0\n",
+    "t_{1}^{(1)} & 0 & 0 \\\\\n",
+    "t_{2}^{(1)} & 0 & 0\n",
     "\\end{array} \\right]\n",
     "\\end{split} \\tag{4a}\n",
     "$$"
@@ -220,7 +220,7 @@
     "\\begin{array}{c}\n",
     "0 \\\\\n",
     "0 \\\\\n",
-    "t_{3}^{(2)}\n",
+    "t_{2}^{(2)}\n",
     "\\end{array} \\right] \\cdot \n",
     "\\left[ \\begin{array}{ccc}\n",
     "0 & 1 & 0\n",
@@ -228,7 +228,7 @@
     "&= \\left[ \\begin{array}{ccc}\n",
     "0 & 0 & 0 \\\\\n",
     "0 & 0 & 0 \\\\\n",
-    "0 & t_{3}^{(2)} & 0\n",
+    "0 & t_{2}^{(2)} & 0\n",
     "\\end{array} \\right]\n",
     "\\end{split} \\quad . \\tag{4b}\n",
     "$$"
@@ -534,6 +534,13 @@
    "metadata": {},
    "source": [
     "**THEOREM:** If $\\mathbf{A} \\in \\mathbb{R}^{N \\times N}$ and $\\text{det} \\left( \\mathbf{A} \\left[1:k \\, , 1:k \\right] \\right) \\ne 0$ for $k = 1 : N-1$, then there exists a lower triangular matrix $\\mathbf{L} \\in \\mathbb{R}^{N \\times N}$ and an upper triangular matrix $\\mathbf{U} \\in \\mathbb{R}^{N \\times N}$ such that $\\mathbf{A} = \\mathbf{L} \\mathbf{U}$. If this is the case and $\\mathbf{A}$ is nonsingular, then the factorization is unique and $\\text{det} \\left( \\mathbf{A} \\right) = u_{11} \\cdots u_{NN}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computational implementation "
    ]
   },
   {
