new notes for Gaussian elimination with partial pivoting

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To avoid the division by small pivots and guarantee that the pivot has the largest absolute value, we may always swap the lines. "
+    "To avoid the division by small pivots and guarantee that the pivot has the largest absolute value, we may always swap the lines. The file `Content/Gaussian_elimination_pivoting.pdf` shows an example of this proccess for $N = 4$."
    ]
   },
   {
@@ -907,7 +907,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "represents an outer product that affects only the terms $\\left[ \\, k : \\, ,  \\, k - 1 : \\, \\right]$ of matrix $\\mathbf{C}^{(k)}$. See the file `Content/Gaussian_elimination.pdf`."
+    "represents an outer product that affects only the terms $\\left[ \\, k : \\, ,  \\, k - 1 : \\, \\right]$ of matrix $\\mathbf{C}^{(k)}$. See the file `Content/Gaussian_elimination_pivoting.pdf`."
    ]
   },
   {
@@ -1052,7 +1052,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and, consequently (see the file `Content/Gaussian_elimination.pdf`),"
+    "and, consequently (see the file `Content/Gaussian_elimination_pivoting.pdf`),"
    ]
   },
   {
