review LDLT decomposition

--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Column 1 $\\left( \\, j = 0 \\, \\right)$\n",
+    "Column 0 $\\left( \\, j = 0 \\, \\right)$\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Column 2 $\\left( \\, j = 1 \\, \\right)$\n",
+    "Column 1 $\\left( \\, j = 1 \\, \\right)$\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Column 3 $\\left( \\, j = 2 \\, \\right)$\n",
+    "Column 2 $\\left( \\, j = 2 \\, \\right)$\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Column 4 $\\left( \\, j = 3 \\, \\right)$\n",
+    "Column 3 $\\left( \\, j = 3 \\, \\right)$\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -641,36 +641,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In your `my_functions.py` file:\n",
+    "1) In your functions file, create a function called `ldlt_decomp` for computing the matrices `L` and `D` from a symmetric matrix `A`. The function must receive a symmetric matrix `A` and return a lower triangular matrix `L` and an 1D array `d` with the diagonal elements of the matrix `D`.\n",
     "\n",
-    "1) Create a function called `ldlt_decomp` for computing the matrices `L` and `D` from a symmetric matrix `A`. The function must receive a symmetric matrix `A` and return a lower triangular matrix `L` and an 1D array `d` with the diagonal elements of the matrix `D`.\n",
-    "\n",
-    "2) Create a function called `ldlt_solve` to solve a linear system by using the calculated `L` and `d`. The function must receive `L`, `d` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
-    "\n",
-    "3) Create a function called `matsym_inverse` to compute the inverse of a symmetric matrix. The code must receive a symmetric matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `ldlt_decomp` and `ldlt_solve`.\n",
-    "\n",
-    "In your `test_my_functions.py` file:\n",
-    "\n",
-    "4) Use the function `ldlt_decomp` to verify if a given symmetric matrix $\\mathbf{A}$ satisfies the condition  $\\mathbf{A} = \\mathbf{L}\\mathbf{D}\\mathbf{L}^{\\top}$.\n",
-    "\n",
-    "5) Compare the solution obtained by using the function `ldlt_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)\n",
-    "\n",
-    "6) Use the function `matsym_inverse` to compute the inverse of a symmetric matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
+    "2) In your test file, use the function `ldlt_decomp` to verify if a given symmetric matrix $\\mathbf{A}$ satisfies the condition  $\\mathbf{A} = \\mathbf{L}\\mathbf{D}\\mathbf{L}^{\\top}$."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) In your functions file, create a function called `ldlt_solve` to solve a linear system by using the calculated `L` and `d`. The function must receive `L`, `d` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
+    "\n",
+    "2) In your test file, compare the solution obtained by using the function `ldlt_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) In your functions file, create a function called `ldlt_inverse` to compute the inverse of a symmetric matrix. The code must receive a symmetric matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `ldlt_decomp` and `ldlt_solve`.\n",
+    "\n",
+    "2) In your test file, use the function `ldlt_inverse` to compute the inverse of a symmetric matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
+   ]
   }
  ],
  "metadata": {
