--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Column 1 $\\left( \\, j = 0 \\, \\right)$\n",
+    "Column 0 $\\left( \\, j = 0 \\, \\right)$\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Column 2 $\\left( \\, j = 1 \\, \\right)$\n",
+    "Column 1 $\\left( \\, j = 1 \\, \\right)$\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Column 3 $\\left( \\, j = 2 \\, \\right)$\n",
+    "Column 2 $\\left( \\, j = 2 \\, \\right)$\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Column 4 $\\left( \\, j = 3 \\, \\right)$\n",
+    "Column 3 $\\left( \\, j = 3 \\, \\right)$\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -392,36 +392,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In your `my_functions.py` file:\n",
+    "1) In your functions file, create a function called `cho_decomp` for computing the matrix `G` from a symmetric and positive definite matrix `A`. The function must receive `A` and return the matrix `G`.\n",
     "\n",
-    "1) Create a function called `cho_decomp` for computing the matrix `G` from a symmetric and positive definite matrix `A`. The function must receive `A` and return the matrix `G`.\n",
-    "\n",
-    "2) Create a function called `cho_solve` to solve a linear system by using the calculated `G`. The function must receive `G` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
-    "\n",
-    "3) Create a function called `matsymposdef_inverse` to compute the inverse of a symmetric positive definite matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `cho_decomp` and `cho_solve`.\n",
-    "\n",
-    "In your `test_my_functions.py` file:\n",
-    "\n",
-    "4) Use the function `cho_decomp` to verify if $\\mathbf{A} = \\mathbf{G}\\mathbf{G}^{\\top}$.\n",
-    "\n",
-    "5) Compare the solution obtained by using the function `cho_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)\n",
-    "\n",
-    "6) Use the function `matsymposdef_inverse` to compute the inverse of a symmetric positive definite matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
+    "2) In your test file, use the function `cho_decomp` to verify if $\\mathbf{A} = \\mathbf{G}\\mathbf{G}^{\\top}$."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) In your functions file, create a function called `cho_solve` to solve a linear system by using the calculated `G`. The function must receive `G` and `y` and return the solution vector `x`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
+    "\n",
+    "2) In your test file, compare the solution obtained by using the function `cho_solve` with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) In your functions file, create a function called `cho_inverse` to compute the inverse of a symmetric positive definite matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the functions `cho_decomp` and `cho_solve`.\n",
+    "\n",
+    "2) In your test file, use the function `cho_inverse` to compute the inverse of a symmetric positive definite matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
+   ]
   }
  ],
  "metadata": {
