review least squares theory

--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the Squared Euclidean norm of $\\mathbf{r}$ is a scalar function depending on the unknows $\\mathbf{p}$ and can be written as follows: "
+    "Notice that the $L_{2}$ norm of $\\mathbf{r}$ is a scalar function depending on the unknows $\\mathbf{p}$ and can be written as follows: "
    ]
   },
   {
