review greens interpolation

--- a/Content/greens_interp_2D.ipynb
+++ b/Content/greens_interp_2D.ipynb
@@ -135,7 +135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6763e0c85e1424b857f4aa3278d22d9",
+       "model_id": "c667d9d990134f7ba91d54b1b21bc8de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,6 +145,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vanderlei/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
     }
    ],
    "source": [
@@ -166,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e024f14caf5b418e927c24fb107455f3",
+       "model_id": "a4333650d03a4d3f8d352f959bce1b99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,7 +228,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20769f093a7c4f3c8930380d6227c036",
+       "model_id": "eb8f9b0a48d94dbf98e179bff02d662e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -230,6 +238,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vanderlei/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: MatplotlibDeprecationWarning: shading='flat' when X and Y have the same dimensions as C is deprecated since 3.3.  Either specify the corners of the quadrilaterals with X and Y, or pass shading='auto', 'nearest' or 'gouraud', or set rcParams['pcolor.shading'].  This will become an error two minor releases later.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
     }
    ],
    "source": [
@@ -365,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +456,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82c3e2b36d0c40589b9db4d0a8c9b696",
+       "model_id": "4e35dc0563e24fc0ab28025219c4ef22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -471,7 +487,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e637d507485d4ec0ba9d22f110fa121d",
+       "model_id": "f68d9199940542fd8b27eadd3027a5c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -497,13 +513,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d1379dbcdc34fcba0b0664a83fdd4ee",
+       "model_id": "c8a6b823b2bf44b9987812eb5dab9b98",
        "version_major": 2,
        "version_minor": 0
       },
