LDLT and Cholesky topics

--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, we conclude that, besides being symmetric, $\\mathbf{U} \\, \\mathbf{L}^{\\top}$ ([equation 2b](#eq2)) is also upper triangular. In this case, $\\mathbf{U} \\, \\mathbf{L}^{\\top}$ must be a diagonal matrix, which we conveniently represent as $\\mathbf{D}$. So, [equation 2b](#eq2) can be rewritten as follows"
+    "Then, we conclude that, besides being symmetric, $\\mathbf{U} \\, \\mathbf{L}^{-\\top}$ ([equation 2b](#eq2)) is also upper triangular. In this case, $\\mathbf{U} \\, \\mathbf{L}^{-\\top}$ must be a diagonal matrix, which we conveniently represent as $\\mathbf{D}$. So, [equation 2b](#eq2) can be rewritten as follows"
    ]
   },
   {
