--- a/Content/straight_line.ipynb
+++ b/Content/straight_line.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "d_{i} = f(x_{i}) \\: ,\n",
+    "d_{i} \\approx f(x_{i}) \\: ,\n",
     "$$"
    ]
   },
