--- a/Content/scalar_vector.ipynb
+++ b/Content/scalar_vector.ipynb
@@ -190,7 +190,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
