vector-operations class, txt with test report

--- a/Content/outer.ipynb
+++ b/Content/outer.ipynb
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pseudo-codes presented above use the `scalar_vec_real` function defined in the notebook [`scalar_vector`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/scalar_vector.ipynb)."
+    "The pseudo-codes presented above use the `scalar_vec_real` function defined in the notebook [`scalar_vector`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/scalar_vector.ipynb)."
    ]
   },
   {
@@ -319,7 +319,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
