matrix-vector and matrix-matrix class

--- a/Content/matrix-vector.ipynb
+++ b/Content/matrix-vector.ipynb
@@ -414,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The previously presented algorithm for calculating a [simple moving average filter](https://github.com/birocoles/Disciplina-metodos-computacionais/tree/master/Content/first_steps_Python/SMA) can be formulated as the product of a matrix $\\mathbf{A}$ and the original data $\\mathbf{x}$, where $\\mathbf{A}$ depends on the number of points forming the moving window and the number of data. For example, consider a data vector $\\mathbf{x}$ given by"
+    "The previously presented algorithm for calculating a [simple moving average filter](https://github.com/birocoles/Disciplina-metodos-computacionais/tree/main/Content/first_steps_Python/SMA) can be formulated as the product of a matrix $\\mathbf{A}$ and the original data $\\mathbf{x}$, where $\\mathbf{A}$ depends on the number of points forming the moving window and the number of data. For example, consider a data vector $\\mathbf{x}$ given by"
    ]
   },
   {
@@ -617,7 +617,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
