notebooks for structured matrices

--- a/Content/diagonal_matrices_part1.ipynb
+++ b/Content/diagonal_matrices_part1.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By using the pseudo-codes defined in the notebooks [`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-vector.ipynb) and [`matrix-matrix.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-matrix.ipynb), deduce the pseudo-codes shown above for computing $\\mathbf{D}\\mathbf{x}$, $\\mathbf{D}\\mathbf{B}$ and $\\mathbf{B}\\mathbf{D}$."
+    "Deduce the pseudo-codes shown above for computing $\\mathbf{D}\\mathbf{x}$, $\\mathbf{D}\\mathbf{B}$ and $\\mathbf{B}\\mathbf{D}$."
    ]
   },
   {
@@ -263,7 +263,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
