--- a/Content/permutation_matrices.ipynb
+++ b/Content/permutation_matrices.ipynb
@@ -173,6 +173,7 @@
     }
    ],
    "source": [
+    "# Identity \n",
     "I = np.identity(4)\n",
     "print(I)"
    ]
@@ -194,6 +195,7 @@
     }
    ],
    "source": [
+    "# Exchange permutation\n",
     "E = np.identity(4)[:,::-1]\n",
     "print(E)"
    ]
@@ -215,6 +217,7 @@
     }
    ],
    "source": [
+    "# Downshift permutation\n",
     "D = np.roll(a=np.identity(4), shift=1, axis=0)\n",
     "print(D)"
    ]
@@ -236,47 +239,9 @@
     }
    ],
    "source": [
+    "# Upshift permutation\n",
     "U = D.T\n",
     "print(U)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0. 10. 20. 30.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = np.arange(4.)*10\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  0.  10.  20.  30.]\n",
-      " [ 40.  50.  60.  70.]\n",
-      " [ 80.  90. 100. 110.]\n",
-      " [120. 130. 140. 150.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = np.arange(16.).reshape((4,4))*10\n",
-    "print(A)"
    ]
   },
   {
@@ -429,6 +394,24 @@
    "metadata": {},
    "source": [
     "#### Product of a permutation matrix a vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0. 10. 20. 30.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(4.)*10\n",
+    "print(x)"
    ]
   },
   {
@@ -625,6 +608,27 @@
    "metadata": {},
    "source": [
     "#### Product of a permutation matrix and a matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.  10.  20.  30.]\n",
+      " [ 40.  50.  60.  70.]\n",
+      " [ 80.  90. 100. 110.]\n",
+      " [120. 130. 140. 150.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.arange(16.).reshape((4,4))*10\n",
+    "print(A)"
    ]
   },
   {
@@ -1082,7 +1086,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
