conclude Gaussian elimination

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1104,7 @@
     "            C[k:,k-1] = \n",
     "\n",
     "            # zeroing of the elements in the (k-1)th column (equation 8)\n",
-    "            C[k:,k:] = \n",
+    "            C[k:,k:] -= \n",
     "\n",
     "        # return the equivalent triangular system and Gauss multipliers\n",
     "        return C[:,:N], C[:,N]"
@@ -1175,15 +1175,7 @@
    "metadata": {},
    "source": [
     "# use the Gauss_elim to compute the equivalent triagular system\n",
-    "C, z = Gauss_elim(A, y)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# select the upper triangle of C\n",
-    "B = np.triu(C)"
+    "B, z = Gauss_elim(A, y)"
    ]
   },
   {
@@ -1338,7 +1330,7 @@
     "            C[k:,k-1] = \n",
     "\n",
     "            # zeroing of the elements in the (k-1)th column (equation 8)\n",
-    "            C[k:,k:] = \n",
+    "            C[k:,k:] -= \n",
     "\n",
     "        # return the triangular matrix with Gauss multipliers and \n",
     "        # all equivalent vectors\n",
@@ -1374,15 +1366,7 @@
    "source": [
     "# use the Gauss_elim_expanded to compute the expanded system\n",
     "# When computing the inverse, the second input is the identity\n",
-    "C, Z = Gauss_elim_expanded(A, np.identity(N))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# select the upper triangle of C\n",
-    "B = np.triu(C)"
+    "B, Z = Gauss_elim_expanded(A, np.identity(N))"
    ]
   },
   {
@@ -1451,7 +1435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
