classes given on 2022

--- a/Content/Givens_rotation.ipynb
+++ b/Content/Givens_rotation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Givens transformation"
+    "# Givens rotation"
    ]
   },
   {
@@ -42,7 +42,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A *Givens trasformation* $\\mathbf{G}(i, k, \\theta)$ is an $M \\times M$ orthogonal matrix given by:"
+    "A *Givens rotation* $\\mathbf{G}(i, k, \\theta)$ is an $M \\times M$ orthogonal matrix. Let us consider the example with $M = 7$, $i = 2$, $k = 5$ and $\\theta = 30^{\\circ}$. In this case, the Given rotation can be represented as follows:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{G}(2, 5, \\theta) = \n",
+    "\\begin{bmatrix} \n",
+    "1 & 0 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & c & 0 & 0 & s & 0 \\\\\n",
+    "0 & 0 & 0 & 1 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & -s & 0 & 0 & c & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 & 0 & 1\n",
+    "\\end{bmatrix} \\quad ,\n",
+    "$$\n",
+    "\n",
+    "where $c = \\cos(\\theta)$ and $s = \\sin(\\theta)$. Note that the Givens rotation is an identity matrix with some modified elements. These elements have indices $ii$, $kk$, $ik$ and $ki$ and are defined by the cosine and sine of $\\theta$."
    ]
   },
   {
@@ -195,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
