--- a/Content/fourier_1D_5.ipynb
+++ b/Content/fourier_1D_5.ipynb
@@ -593,7 +593,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
