--- a/Content/newton-cotes.ipynb
+++ b/Content/newton-cotes.ipynb
@@ -320,9 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -332,9 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def integrand(t):\n",
@@ -345,9 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def comp_trapezoidal(N, x0, x1, integrand):\n",
@@ -362,9 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def comp_simpson(N, x0, x1, integrand):\n",
@@ -380,9 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = 0.8"
@@ -390,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -404,9 +394,9 @@
     }
    ],
    "source": [
-    "print '%.3f' % erf(x)\n",
-    "print '%.3f' % comp_trapezoidal(1200, 0., x, integrand)\n",
-    "print '%.3f' % comp_simpson(1200, 0., x, integrand)"
+    "print('%.3f' % erf(x))\n",
+    "print('%.3f' % comp_trapezoidal(1200, 0., x, integrand))\n",
+    "print('%.3f' % comp_simpson(1200, 0., x, integrand))"
    ]
   },
   {
@@ -451,7 +441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
