--- a/Content/elements_Python/notation.ipynb
+++ b/Content/elements_Python/notation.ipynb
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the syntax $\\mathbf{x}[2:5:1]$ specifies the *start* (index 2), *stop* (index 5) and the *step* (equal to 1). We opted for defining the colon notation in this way because it is equivalent to [slicing of numpy arrays](https://docs.scipy.org/doc/numpy/reference/arrays.indexing.html). "
+    "Notice that the syntax $\\mathbf{x}[2:5:1]$ specifies the *start* (index 2), *stop* (index 5) and the *step* (equal to 1). We opted for defining the colon notation in this way because it is equivalent to [slicing of numpy arrays](https://numpy.org/doc/stable/user/basics.indexing.html#basics-indexing). "
    ]
   },
   {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "array([  0.,   1., -65.,   7.])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -587,9 +587,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
